# aoc-2022

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  main.cpp
